gcc/testsuite/gcc.dg/cilk-plus/cilk_keywords_test/errors/cilk_for_invalid_cmp3.c
/* <feature>
    The three items inside parentheses in the grammar, separated by semicolons,
     are the initialization, condition, and increment
   </feature>
*/

int a[5000];

void func ()
{
    int i, j = 0;
    _Cilk_for(i = 0; i < 5000 || j == 0; i++) /* { dg-error "_Cilk_for condition must be one of the" } */
    {
	a[i] = i;
    }
}
